--- a/src/Resources/views/storefront/narrative/component/product/listing.html.twig
+++ b/src/Resources/views/storefront/narrative/component/product/listing.html.twig
@@ -16,7 +16,8 @@ optional: use the JSON SCHEMA of the product layout block to set other params (l
     #}
     <div><h3>{{ block.title[0] }}</h3> <a href="{{ block.see_all_link[0] }}"><h5>{{ block.see_all_label[0] }}</h5></a></div>
 
-    <div class="row cms-listing-row js-listing-wrapper">
+    <div class="row cms-listing-row js-listing-wrapper bx-narrative" data-bx-variant-uuid="{{ variantUuid }}"
+         data-bx-narrative-name="products-list" data-bx-narrative-group-by="{{ groupBy }}">
         {% block element_product_listing_col %}
             {% for bxblock in block.blocks %}
                 {#
