--- a/src/Resources/views/storefront/narrative/layout/header/suggest/product-list.html.twig
+++ b/src/Resources/views/storefront/narrative/layout/header/suggest/product-list.html.twig
@@ -1,5 +1,8 @@
 {% block layout_search_suggest_results %}
-    <div class="bx-narrative" data-bx-variant-uuid="{{ variantUuid }}" data-bx-narrative-name="products-list" data-bx-narrative-group-by="{{ groupBy }}">
+    <div class="bx-narrative"
+         data-bx-variant-uuid="{{ variantUuid }}"
+         data-bx-narrative-name="products-list"
+         data-bx-narrative-group-by="{{ groupBy }}">
         {% for bxblock in block.blocks %}
             {% if bxblock.product %}
                 {% block layout_search_suggest_result_product %}
