--- a/src/Resources/views/storefront/narrative/component/pagination.html.twig
+++ b/src/Resources/views/storefront/narrative/component/pagination.html.twig
@@ -2,7 +2,7 @@
 @BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/pagination.html.twig
 
 displays the pagination by using the bx-pagination accessor as configured in accessor.xml
-(accessor model Boxalino\RealTimeUserExperience\Service\Api\Response\Accessor\Pagination)
+(accessor model Boxalino\RealTimeUserExperienceApi\Service\Api\Response\Accessor\Pagination)
 #}
 
 {% block component_pagination_nav %}
