[localized title] update on localized properties access

--- a/src/Resources/views/storefront/narrative/component/product/listing.html.twig
+++ b/src/Resources/views/storefront/narrative/component/product/listing.html.twig
@@ -14,7 +14,7 @@ optional: use the JSON SCHEMA of the product layout block to set other params (l
     {#
        relevant in the case of search with subphrases matches
     #}
-    <div><h3>{{ block.title[0] }}</h3> <a href="{{ block.see_all_link[0] }}"><h5>{{ block.see_all_label[0] }}</h5></a></div>
+    <div><h3>{{ block.title }}</h3> <a href="{{ block.see_all_link }}"><h5>{{ block.see_all_label }}</h5></a></div>
 
     <div class="row cms-listing-row js-listing-wrapper bx-narrative" data-bx-variant-uuid="{{ variantUuid }}"
          data-bx-narrative-name="products-list" data-bx-narrative-group-by="{{ groupBy }}">
