--- a/src/Resources/views/storefront/narrative/element/cms-element-product-slider.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-product-slider.html.twig
@@ -25,9 +25,9 @@ all JSON schema properties are returned in an array, so if a single value is exp
                      }'>
 
                 {% block element_product_slider_title %}
-                    {% if block.title[0] %}
+                    {% if block.title %}
                         <div class="cms-element-title">
-                            <p class="cms-element-title-paragraph">{{ block.title[0] }}</p>
+                            <p class="cms-element-title-paragraph">{{ block.title }}</p>
                         </div>
                     {% endif %}
                 {% endblock %}
