--- a/src/Resources/views/storefront/narrative/layout/header/suggest/product-item.html.twig
+++ b/src/Resources/views/storefront/narrative/layout/header/suggest/product-item.html.twig
@@ -9,7 +9,7 @@
                         <img src="{{ block.product.products_image[0] }}"
                              srcset="{{ block.product.products_image[0] }}"
                              class="search-suggest-product-image"
-                             alt="{{ block.product.products_title }}"
+                             alt="{{ block.product.title }}"
                         />
                     </div>
                 {% endblock %}
