[search controller] replace pagelet with ajax

--- a/src/Resources/views/storefront/narrative/element/cms-element-product-listing.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-product-listing.html.twig
@@ -31,7 +31,7 @@ uses a loop through Boxalino response blocks (block.blocks) to render the other 
     {% endif %}
 
     {% if page.searchTerm is not empty %}
-        {% set dataUrl = url('widgets.search.pagelet', { search: page.searchTerm }) %}
+        {% set dataUrl = url('widgets.search.pagelet.v2', { search: page.searchTerm }) %}
         {% set filterUrl = null %}
     {% endif %}
     {% if page.searchTerm is defined %}
