--- a/src/Resources/views/storefront/narrative/component/sorting.html.twig
+++ b/src/Resources/views/storefront/narrative/component/sorting.html.twig
@@ -4,8 +4,8 @@
 renders the sorting as available per accessor model
 (Boxalino/RealTimeUserExperience/Framework/Conent/Listing/ApiSortingModel)
 #}
-{% set config = { sorting: block.sorting.field } %}
 {% set current = block.model.getCurrent() %}
+{% set config = { sorting: current } %}
 {% block element_product_listing_sorting %}
     <div class="sorting" data-listing-sorting="true" data-listing-sorting-options='{{ config|json_encode }}'>
         <select class="sorting custom-select" aria-label="{{ 'general.sortingLabel'|trans|striptags }}">
