Initialize filters manually to fix filter display

--- a/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
@@ -24,6 +24,7 @@ renders the facets as are set in the facet model
             {% block element_sidebar_filter_panel %}
                 <div id="filter-panel-wrapper"
                      class="filter-panel-wrapper"
+                     data-rtux-listing-filter="true"
                      data-offcanvas-filter-content="true">
                     {% block component_filter_panel %}
                         {% block component_filter_panel_header %}
