--- a/src/Resources/views/storefront/narrative/component/listing/filter/filter-multiselect.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter/filter-multiselect.html.twig
@@ -1,7 +1,7 @@
 {% set filterItemId = 'filter-' ~ name ~ '-' ~ random() %}
 
 {% if pluginSelector is not defined %}
-    {% set pluginSelector = 'filter-multi-select' %}
+    {% set pluginSelector = 'rtux-filter-multi-select' %}
 {% endif %}
 
 {% block component_filter_multi_select %}
