--- a/src/Resources/views/storefront/narrative/component/listing/filter/filter-stars.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter/filter-stars.html.twig
@@ -22,8 +22,8 @@
 
     {% block component_filter_rating %}
         <div class="filter-rating filter-panel-item{% if not sidebar %} dropdown{% endif %}"
-             data-filter-rating="true"
-             data-filter-rating-options='{
+             data-rtux-filter-rating="true"
+             data-rtux-filter-rating-options='{
             "name": "{{ name }}",
             "maxPoints": "{{ maxPoints }}",
             "snippets": {
