--- a/src/Resources/views/storefront/narrative/component/listing/filter/filter-switch.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter/filter-switch.html.twig
@@ -11,8 +11,8 @@ in this sample, if there are only options with the facet value set to "false" or
         {% endif %}
     {% endfor %}
     <div class="filter-boolean filter-panel-item"
-         data-filter-boolean="true"
-         data-filter-boolean-options='{ "name": "{{ name }}", "displayName": "{{ displayName }}" }'>
+         data-rtux-filter-boolean="true"
+         data-rtux-filter-boolean-options='{ "name": "{{ name }}", "displayName": "{{ displayName }}" }'>
 
         {% block component_filter_boolean_container %}
             <div class="custom-control custom-checkbox">
