--- a/src/Resources/views/storefront/narrative/component/listing/filter/filter-range.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter/filter-range.html.twig
@@ -16,8 +16,8 @@
 {% if value.hitCount > 1 %}
     {% block component_filter_range %}
         <div class="filter-range filter-panel-item{% if not sidebar %} dropdown{% endif %}"
-             data-filter-range="true"
-             data-filter-range-options='{
+             data-rtux-filter-range="true"
+             data-rtux-filter-range-options='{
              "name": "{{ name }}",
              "minKey": "min-price",
              "maxKey": "max-price",
