Fix filter removal by using the right field names.

--- a/src/Resources/views/storefront/narrative/component/listing/filter/filter-range.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter/filter-range.html.twig
@@ -19,8 +19,8 @@
              data-rtux-filter-range="true"
              data-rtux-filter-range-options='{
              "name": "{{ name }}",
-             "minKey": "min-price",
-             "maxKey": "max-price",
+             "minKey": "{{ facet.rangeFromField }}",
+             "maxKey": "{{ facet.rangeToField }}",
              "currencySymbol": "{{ currencySymbol }}",
              "snippets": {
                 "filterRangeActiveMinLabel": "{{ filterRangeActiveMinLabel }}",
