--- a/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
@@ -119,15 +119,22 @@ renders the facets as are set in the facet model
                                             {% for selectedFacet in block.model.getSelectedFacets() %}
                                                 {% for selectedValue in selectedFacet.getSelectedValues() %}
                                                     {% if (selectedValue.minSelectedValue is not null) and (selectedValue.minSelectedValue != "0") %}
-                                                        <span class="filter-active">
-                                                            {{ selectedFacet.label }} {{ 'from'|trans|sw_sanitize }} {{ selectedValue.minSelectedValue }}
-                                                            <button class="filter-active-remove" data-id="{{ selectedValue.minSelectedValue }}">&times;</button>
-                                                        </span>
+                                                        {% if selectedFacet.visualisation == 'stars' %}
+                                                            <span class="filter-active">
+                                                                {{ selectedFacet.label }} {{ 'At least'|trans|lower|sw_sanitize }} {{ selectedValue.minSelectedValue }}
+                                                                <button class="filter-active-remove" data-id="{{ selectedFacet.field }}">&times;</button>
+                                                            </span>
+                                                        {% else %}
+                                                            <span class="filter-active">
+                                                                {{ selectedFacet.label }} {{ 'from'|trans|sw_sanitize }} {{ selectedValue.minSelectedValue }}
+                                                                <button class="filter-active-remove" data-id="{{ selectedFacet.rangeFromField }}">&times;</button>
+                                                            </span>
+                                                        {% endif %}
                                                     {% endif %}
                                                     {% if selectedValue.maxSelectedValue is not null %}
                                                         <span class="filter-active">
                                                             {{ selectedFacet.label }} {{ 'to'|trans|sw_sanitize }} {{ selectedValue.maxSelectedValue }}
-                                                            <button class="filter-active-remove" data-id="{{ selectedValue.maxSelectedValue }}">&times;</button>
+                                                            <button class="filter-active-remove" data-id="{{ selectedFacet.rangeToField }}">&times;</button>
                                                         </span>
                                                     {% endif %}
                                                     {% if selectedValue.value is not null %}
