--- a/src/Resources/views/storefront/narrative/component/listing/filter/filter-stars.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter/filter-stars.html.twig
@@ -2,10 +2,9 @@
 
 {% if maxPoints > 0 %}
     {% set filterItemId = 'filter-' ~ name ~ '-' ~ random() %}
-    {% set currentPoints =  0 %}
     {% set type='blank' %}
     {% if facet.isSelected() %}
-        {% set selectedPoints = facet.getSelectedValues[0].maxSelectedValue %}
+        {% set selectedPoints = facet.getSelectedValues[0].minSelectedValue %}
     {% endif %}
 
     {% if maxPoints is not defined %}
@@ -73,7 +72,7 @@
 
                                 {% block component_filter_rating_point_label %}
                                     <label data-review-form-point="{{ point }}"
-                                           class="filter-rating-star {% if currentPoints >= point %} is-active{% endif %}">
+                                           class="filter-rating-star {% if selectedPoints >= point %} is-active{% endif %}">
 
                                         {% block component_filter_rating_point_radio %}
                                             <input class="product-detail-review-form-radio"
@@ -83,11 +82,8 @@
                                         {% endblock %}
 
                                         {% block component_filter_rating_point_radio_element %}
-                                            {% if (selectedPoints is not null) and (selectedPoints > 0) %}
-                                                {% set type="selected" %}
-                                            {% endif %}
                                             {% sw_include '@Storefront/storefront/component/review/point.html.twig' with {
-                                                type: type
+                                                type: 'blank'
                                             } %}
                                         {% endblock %}
                                     </label>
