[autocomplete-js] template update to set request params from within JS instead of template

--- a/src/Resources/views/storefront/layout/header/search.html.twig
+++ b/src/Resources/views/storefront/layout/header/search.html.twig
@@ -23,14 +23,10 @@
                         "url": "{{ rtuxApi.getServerUrl() }}",
                         "apiPreferentialAccount": "{{ rtuxApi.getAccount() }}",
                         "apiPreferentialKey": "{{ rtuxApi.getApiServerKey() }}",
-                        "apiPreferentialProfile": "{{ rtuxApi.getCustomerContext() }}",
-                        "apiProductsCount":5,
-                        "apiSuggestionsCount":4,
-                        "apiProductsGroupBy":"products_group_id",
                         "dev": '{{ isDev }}'=='1' ? true : false,
                         "test": '{{ isTest }}'=='1' ? true : false,
                         "language": "{{ page.header.activeLanguage.translationCode.code|lower|split('-')[0] }}",
-                        "suggestLink": '{{ seoUrl('frontend.search.page') }}',
+                        "suggestLink": '{{ seoUrl('frontend.search.page') }}?search=',
                         "currency" : '{{ page.header.activeCurrency.translated.shortName }}',
                         "noSearchResultsMessage": '{{ "header.searchNoResult"|trans|sw_sanitize }}',
                         "seeAllSearchResultsMessage": '{{ "header.searchAllResults"|trans|sw_sanitize }}',
