[sidebar] search/ajax samples

--- a/src/Resources/views/storefront/narrative/element/cms-element-sidebar-filter.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-sidebar-filter.html.twig
@@ -33,6 +33,7 @@ If you wish the default Shopware6 facets feature (facets to be constant) - use d
          data-listing-options='{
              "sidebar": "{{ sidebar|json_encode }}",
              "dataUrl": "{{ dataUrl }}",
+             "params": {{ params|json_encode }},
              "filterUrl": "{{ filterUrl }}",
              "snippets": {
                 "resetAllButtonText": "{{ 'listing.filterPanelResetAll'|trans|sw_sanitize }}"
