--- a/src/Resources/views/storefront/narrative/component/product/listing-collection.html.twig
+++ b/src/Resources/views/storefront/narrative/component/product/listing-collection.html.twig
@@ -9,20 +9,23 @@ to access the collection of products (as returned by the Boxalino response) (blo
 renders the product by ignoring other parameter data sent by Boxalino, close to original template
 #}
 {% block element_product_listing_row %}
-    <div class="row cms-listing-row js-listing-wrapper bx-narrative" data-bx-variant-uuid="{{ variantUuid }}"
-         data-bx-narrative-name="products-list" data-bx-narrative-group-by="{{ groupBy }}">
-        {% block element_product_listing_col %}
-            {% for product in block.model.collection %}
-                <div class="cms-listing-col {{ listingColumns }}">
-                    {% block element_product_listing_box %}
-                        {% sw_include '@BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/product/card/box.html.twig' with {
-                            'layout': "minimal",
-                            'displayMode': ""
+    <div class="row cms-listing-row js-listing-wrapper {{ block.getBxAttributes().getClass() }}"
+    {% for bxAttribute in block.getBxAttributes() %}
+        {{ bxAttribute.getName() }}="{{ bxAttribute.getValue() }}"
+    {% endfor %}
+    >
+    {% block element_product_listing_col %}
+        {% for product in block.model.collection %}
+            <div class="cms-listing-col {{ listingColumns }}">
+                {% block element_product_listing_box %}
+                    {% sw_include '@BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/product/card/box.html.twig' with {
+                        'layout': "minimal",
+                        'displayMode': ""
                         } %}
-                    {% endblock %}
-                </div>
-            {% endfor %}
-        {% endblock %}
+                {% endblock %}
+            </div>
+        {% endfor %}
+    {% endblock %}
     </div>
 {% endblock %}
 
