--- a/src/Resources/views/storefront/narrative/component/product/listing.html.twig
+++ b/src/Resources/views/storefront/narrative/component/product/listing.html.twig
@@ -16,8 +16,11 @@ optional: use the JSON SCHEMA of the product layout block to set other params (l
     #}
     <div><h3>{{ block.title }}</h3> <a href="{{ block.see_all_link }}"><h5>{{ block.see_all_label }}</h5></a></div>
 
-    <div class="row cms-listing-row js-listing-wrapper bx-narrative" data-bx-variant-uuid="{{ variantUuid }}"
-         data-bx-narrative-name="products-list" data-bx-narrative-group-by="{{ groupBy }}">
+    <div class="row cms-listing-row js-listing-wrapper {{ block.getBxAttributes().getClass() }}"
+    {% for bxAttribute in block.getBxAttributes() %}
+        {{ bxAttribute.getName() }}="{{ bxAttribute.getValue() }}"
+    {% endfor %}
+    >
         {% block element_product_listing_col %}
             {% for bxblock in block.blocks %}
                 {#
