--- a/src/Resources/views/storefront/narrative/element/cms-element-product-slider.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-product-slider.html.twig
@@ -34,10 +34,11 @@ all JSON schema properties are returned in an array, so if a single value is exp
 
                 {% block element_product_slider_inner %}
                     {% block element_product_slider_element %}
-                        <div class="product-slider-container bx-narrative"
-                             data-product-slider-container="true"
-                             data-bx-variant-uuid="{{ variantUuid }}"
-                             data-bx-narrative-name="products-list" data-bx-narrative-group-by="{{ groupBy }}">
+                        <div class="product-slider-container {{ block.getBxAttributes().getClass() }}"
+                            {% for bxAttribute in block.getBxAttributes() %}
+                                {{ bxAttribute.getName() }}="{{ bxAttribute.getValue() }}"
+                            {% endfor %}
+                            data-product-slider-container="true">
                             {% for bxblock in block.blocks %}
                                 {% block element_product_slider_inner_item %}
                                     <div class="product-slider-item">
