--- a/src/Resources/views/storefront/narrative/component/sorting.html.twig
+++ b/src/Resources/views/storefront/narrative/component/sorting.html.twig
@@ -1,6 +1,8 @@
 {#
 @BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/sorting.html.twig
 
+similar to Shopware6 @Storefront/storefront/component/sorting.html.twig
+
 renders the sorting as available per accessor model
 (Boxalino/RealTimeUserExperience/Framework/Conent/Listing/ApiSortingModel)
 #}
@@ -9,9 +11,8 @@ renders the sorting as available per accessor model
 {% block element_product_listing_sorting %}
     <div class="sorting" data-listing-sorting="true" data-listing-sorting-options='{{ config|json_encode }}'>
         <select class="sorting custom-select" aria-label="{{ 'general.sortingLabel'|trans|striptags }}">
-            {% for sorting in block.model.getSortings() %}
-                {% set key = sorting.key %}
-                <option value="{{ key }}"{% if key == current %} selected{% endif %}>{{ sorting.snippet|trans|sw_sanitize }}</option>
+            {% for key, sorting in block.model.getSortings() %}
+                <option value="{{ key }}"{% if key == current %} selected{% endif %}>{{ sorting.label|sw_sanitize }}</option>
             {% endfor %}
         </select>
     </div>
