[facet][js] update for multi-select facet options to allow same-value options select

--- a/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
@@ -147,7 +147,7 @@ renders the facets as are set in the facet model
                                                             {% else %}
                                                         <span class="filter-active">
                                                             {{ selectedValue.value }}
-                                                            <button class="filter-active-remove" data-id="{{ selectedValue.value }}">&times;</button>
+                                                            <button class="filter-active-remove" data-id="{{ selectedFacet.field }}_{{ selectedValue.value }}">&times;</button>
                                                         </span>
                                                             {% endif %}
                                                     {% endif %}
