--- a/src/Resources/views/storefront/narrative/element/cms-element-sidebar-filter.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-sidebar-filter.html.twig
@@ -27,6 +27,10 @@ If you wish the default Shopware6 facets feature (facets to be constant) - use d
     {% set params = {search: page.searchTerm } %}
 {% endif %}
 
+{% if element %}
+    {% set params = {slots: element.id} %}
+{% endif %}
+
 {% block element_filter_listing_wrapper %}
     <div class="cms-element-product-listing-wrapper"
          data-listing="true"
