--- a/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
@@ -51,7 +51,7 @@ renders the facets as are set in the facet model
                                                         {% sw_include '@BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/listing/filter/filter-range.html.twig' with {
                                                             facet: facet,
                                                             sidebar: sidebar,
-                                                            name: facet.field,
+                                                            name: facet.getRequestField(),
                                                             displayName: facet.label
                                                         } %}
                                                     {% endif %}
@@ -60,7 +60,7 @@ renders the facets as are set in the facet model
                                                         {% sw_include '@BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/listing/filter/filter-stars.html.twig' with {
                                                             facet: facet,
                                                             sidebar: sidebar,
-                                                            name: facet.field,
+                                                            name: facet.getRequestField(),
                                                             displayName: facet.label
                                                         } %}
                                                     {% endif %}
@@ -69,7 +69,7 @@ renders the facets as are set in the facet model
                                                         {% sw_include '@BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/listing/filter/filter-multiselect.html.twig' with {
                                                             facet: facet,
                                                             sidebar: sidebar,
-                                                            name: facet.field,
+                                                            name: facet.getRequestField(),
                                                             displayName: facet.label
                                                         } %}
                                                     {% endif %}
@@ -78,7 +78,7 @@ renders the facets as are set in the facet model
                                                         {% sw_include '@BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/listing/filter/filter-multiselect.html.twig' with {
                                                             facet: facet,
                                                             sidebar: sidebar,
-                                                            name: facet.field,
+                                                            name: facet.getRequestField(),
                                                             displayName: facet.label
                                                         } %}
                                                     {% endif %}
@@ -88,7 +88,7 @@ renders the facets as are set in the facet model
                                                         {% sw_include '@BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/listing/filter/filter-switch.html.twig' with {
                                                             facet: facet,
                                                             sidebar: sidebar,
-                                                            name: facet.field,
+                                                            name: facet.getRequestField(),
                                                             displayName: facet.label
                                                         } %}
                                                     {% endif %}
